[package]
name = "database"
version = "0.1.0"
edition = "2021"


[dependencies]
aws-config = "0.54.1"
aws-sdk-dynamodb = "0.24.0"
tokio = { version = "1", features = ["full"] }
serde_json ="1.0.91"
rand = "0.8.5"
serde = {version = "1.0.152" , features = ["derive"]}

[profile.mydev]
inherits = "dev"